- Users list admin page
- Shortcode Example admin page
- [form_inquiry] Shortcode for the frontend form
- Created method loggedInUser() for checking and pulling automaticly user information

### Changed
- Prefix from Sf to Scf
- Changed structure. Moved Admin and Public into includes
- ScfFunctions class
- sendToDatabase() method
- Prefix from Scf to Scf_

### Removed
-

### Fixed
-

### Bugs
-

### To proceed
- Proceed with sendToDatabase() method for sending value to the database with AJAX

#####################################################################

## [1.0.0] - 2020-08-07
### Added
- Send the data to database
- Created method sendToDatabase()
- Created method collectData() for collection data from the database
- Finished page for Shortcodes example
- Finished page for Users list

### Changed
-

### Removed
- Deleted template-parts from Admin and Public folder
- Scf_Shortcodes class extends Scf_Function

### Fixed
-

### Bugs
-

### To proceed
-

#####################################################################

## [1.0.0] - 2020-08-08
### Added
- Added on both admin page welcome div
- AJAX done
- AJAX validation done
- Added minimal design for the form on the front-end
- Added shortcode [form_user_list] for the front-end
- Created class Scf_SettingLinks for setting links

### Changed
- Changed order from selecting data from the database from ASC to DESC
- Users List page to Form Subscriptions
- Added pagination on the admin page with method collectData()

### Removed
-

### Fixed
-

### Bugs
-

### To proceed
- Proceed with [form_user_list] and create a pagination

#####################################################################

## [1.0.0] - 2020-08-08
### Added
- Created pagination for the show form shortcode

### Changed
- Changed README.md
- Changed commenting on uninstall.php
- Localization and translation

### Removed
-

### Fixed
-

### Bugs
-

### To proceed
-

#####################################################################