@@ -4,7 +4,6 @@
     border-color: #c3e6cb;
     padding: .75rem 1.25rem;
 }
-
 #firstName-info,
 #lastName-info,
 #email-info,
@@ -15,7 +14,6 @@
     border-color: #f5c6cb;
     font-size: 14px;
 }
-
 .ajax-loader {
     display: none;
     z-index: 1000;
@@ -25,11 +23,9 @@
     width: 30px;
     background-repeat: no-repeat;
 }
-
 body.loading .ajax-loader {
     overflow: hidden;
 }
-
 body.loading .ajax-loader {
     display: block;
     position: relative;
@@ -38,11 +34,9 @@ body.loading .ajax-loader {
     height: 50px;
     top: 5px;
 }
-
 .buttonGif {
     display: inline-flex;
 }
-
 input.ScfFirstName,
 input.ScfLastName,
 input.ScfEmail,
@@ -50,17 +44,14 @@ input.ScfSubject,
 input.ScfMessage {
     width: 100%;
 }
-
 .ScfWrapper {
     width: 100%;
 }
-
 .inner {
     overflow: hidden;
     display: none;
 
 }
-
 a.toggle {
     text-decoration: none;
     width: 100%;
@@ -71,47 +62,38 @@ a.toggle {
     transition: background .3s ease;
 
 }
-
 .accordion li {
     background: #fff;
     margin: 3px;
 }
-
 ul.accordion {
     list-style-type: none;
 }
-
 ul.accordion {
     list-style-type: none;
     margin: 0;
 }
-
 .scf_formdata {
     border: 3px solid #fff;
     padding: 5px;
 }
-
 .scf_show_form_wrapper {
     border: 3px solid #fff;
     padding: 7px;
 }
-
 .scf_show_form_inner_wrapper {
     padding: 10px;
     width: 99%;
     background: #fff;
     margin: 0 auto;
 }
-
 table.scf_show_form_table {
     margin: 0;
 }
-
 table.scf_show_form_table th,
 table.scf_show_form_table td {
     font-size: 12px;
 }
-
 ul.inner li {
     font-size: 12px;
 }
